deploy: fe6ddc534fdc32b02b34dae5ce61623fee43bdb2

--- a/models/job/index.html
+++ b/models/job/index.html
@@ -1271,8 +1271,8 @@ https://api.m.pluggedspace.org/api/predictions/latest/
 <h2 id="support">Support</h2>
 <ul>
 <li><strong>Email:</strong> support@pluggedspace.org</li>
-<li><strong>Telegram:</strong> <a href="https://t.me/MatchOutcomeBot">@MatchOutcomeBot</a></li>
-<li><strong>Documentation:</strong> <a href="https://docs.pluggedspace.org/models/match">https://docs.pluggedspace.org/models/match</a></li>
+<li><strong>Telegram:</strong> <a href="https://t.me/jobautobot">@jobautobot</a></li>
+<li><strong>Documentation:</strong> <a href="https://docs.pluggedspace.org/models/job">https://docs.pluggedspace.org/models/job</a></li>
 </ul>
 
 
