deploy: 921dd0a78c88ebc22eee76c93c9b2a1848a53568

--- a/models/job/index.html
+++ b/models/job/index.html
@@ -2160,8 +2160,8 @@
 <ul>
 <li><strong>In-Bot Support</strong>: Use <code>/help</code> for command assistance</li>
 <li><strong>Email</strong>: support@pluggedspace.org</li>
-<li><strong>Documentation</strong>: <a href="https://docs.pluggedspace.org/models/jobautobot">docs.pluggedspace.org/models/jobautobot</a></li>
-<li><strong>Website</strong>: <a href="https://pluggedspace.org/projects/jobautobot">pluggedspace.org/projects/jobautobot</a></li>
+<li><strong>Documentation</strong>: <a href="https://docs.pluggedspace.org/models/job">docs.pluggedspace.org/models/job</a></li>
+<li><strong>Website</strong>: <a href="https://pluggedspace.org/projects/job">pluggedspace.org/projects/job</a></li>
 </ul>
 <h3 id="common-issues">Common Issues</h3>
 <ul>
