deploy: 4651e59e4403fb19dae9062f915bbb13baa0cd53

--- a/index.html
+++ b/index.html
@@ -503,10 +503,9 @@
 <h2 id="overview">🔍 Overview</h2>
 <p>Pluggedspace powers a suite of intelligent, scalable tools, including:</p>
 <ul>
-<li><strong>Monica</strong> — AI-powered customer service assistant.</li>
-<li><strong>DRAC</strong> — Data resolution and analytics center.</li>
-<li><strong>KYC Engine</strong> — Identity verification and compliance tool.</li>
-<li><strong>Bundles &amp; APIs</strong> — Unified access, billing, and API management.</li>
+<li><strong>Job Autobot</strong> — AI-powered Job search &amp; prep assistant.</li>
+<li><strong>Match Bot</strong> — Football Predictor.</li>
+<li><strong>Atlas</strong> — Intelligent Business Suite.</li>
 </ul>
 <p>Explore how each product works, how to integrate with them, and best practices for deploying them in your organization.</p>
 <h2 id="getting-started">🚀 Getting Started</h2>
@@ -518,10 +517,9 @@
 </ul>
 <h2 id="product-documentation">📦 Product Documentation</h2>
 <ul>
-<li><a href="monica/index.md">Monica – Customer Service AI</a></li>
-<li><a href="drac/index.md">DRAC – Dispute &amp; Data Resolution</a></li>
-<li><a href="kyc/index.md">KYC Engine – Compliance Layer</a></li>
-<li><a href="billing/index.md">Bundles, Plans &amp; Billing</a></li>
+<li><a href="models/job/">Job AutoBot – Customer Service AI</a></li>
+<li><a href="models/match/">Match Bot – Dispute &amp; Data Resolution</a></li>
+<li><a href="data/">Atlas – Compliance Layer</a></li>
 </ul>
 <h2 id="resources">📘 Resources</h2>
 <ul>
