deploy: d5981067332dcd2a5487c7865ad019a45a6ae924

--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
 </ul>
 <h2 id="product-documentation">📦 Product Documentation</h2>
 <ul>
-<li><a href="models/job/">Job AutoBot – Customer Service AI</a></li>
-<li><a href="models/match/">Match Bot – Dispute &amp; Data Resolution</a></li>
-<li><a href="data/">Atlas – Compliance Layer</a></li>
+<li><a href="models/job/">Job AutoBot – Job AI</a></li>
+<li><a href="models/match/">Match Bot – Match Predictor</a></li>
+<li><a href="data/">Atlas – Intelligence Suite</a></li>
 </ul>
 <h2 id="resources">📘 Resources</h2>
 <ul>
