deploy: b0d43d9dc27510d8b439016f49efa1bf401303ca

--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
 
 <h1 id="welcome-to-pluggedspace-documentation">Welcome to Pluggedspace Documentation</h1>
-<p><strong>Pluggedspace</strong> is a unified platform offering smart SaaS tools designed for startups, agencies, and enterprise teams. This documentation provides everything you need to get started with our ecosystem, use our APIs, and integrate our services into your workflows.</p>
+<p><strong>Pluggedspace</strong> is a unified platform offering smart tools and solutions designed for every one. This documentation provides everything you need to get started with our ecosystem, use our Tools, and integrate our services into your workflows.</p>
 <h2 id="overview">🔍 Overview</h2>
 <p>Pluggedspace powers a suite of intelligent, scalable tools, including:</p>
 <ul>
